# opsu

./: .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  Pipfile  README.md  manage.py  pyproject.toml  requirements.txt
SQL/: carreras.csv  carreras.sql  error_carga.csv  error_carga.xlsx
api_v1/: apps.py  institutions-info-moke (1).ts  serializers copy.py  serializers.py  serializers_original.py  urls.py  viewsets.py
books/: admin.py  apps.py  models.py  views.py
cuenta/: admin.py  apps.py  forms.py  libSobreEscribirImagen.py  models.py  sobreescribir_avatar.py  tokens.py  urls.py  views.py
front/: 3rdpartylicenses.txt  index.html  main-es2015.1b28c4b699e8ebcbd170.js  main-es2015.22085d0911f2856bf7c3.js  main-es2015.5d85f7c76d3d1516d958.js  main-es2015.73a61a4c105c5a7f3297.js  main-es2015.7475b90b27d4720019b9.js  main-es2015.8b1f32744f1976629cfa.js  main-es2015.9275e1fc6c40e8e1eeb3.js  main-es2015.a4c840c1e0a490d662d3.js  main-es2015.cc70b7ec28eb39d7086d.js  main-es2015.d339aa4b0dfa5c6ae320.js  main-es2015.d97c0f6f9d642f83a55e.js  main-es2015.e74db36eebdca9cf4ae0.js  main-es5.1b28c4b699e8ebcbd170.js  main-es5.22085d0911f2856bf7c3.js  main-es5.5d85f7c76d3d1516d958.js  main-es5.73a61a4c105c5a7f3297.js  main-es5.7475b90b27d4720019b9.js  main-es5.8b1f32744f1976629cfa.js  main-es5.9275e1fc6c40e8e1eeb3.js  main-es5.a4c840c1e0a490d662d3.js  main-es5.cc70b7ec28eb39d7086d.js  main-es5.d339aa4b0dfa5c6ae320.js  main-es5.d97c0f6f9d642f83a55e.js  main-es5.e74db36eebdca9cf4ae0.js  polyfills-es5.9e286f6d9247438cbb02.js  scripts.38e0b3c0a0317e82c8b7.js  (+7 more)
globales/: apps.py  (+7 more)
(+356 files in other folders)
